--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -18,6 +18,8 @@
     "mathjs": "^13.2.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router": "^7.13.0",
+    "react-router-dom": "^7.13.0",
     "tailwind-merge": "^2.5.5",
     "zustand": "^5.0.2"
   },
